--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,9 @@
     <groupId>jtechlog.jtechlog-gem-game</groupId>
     <artifactId>jtechlog-gem-game</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <name>jtechlog-gem-game</name>
-    <description>Gem Game logikai játék
-    </description>
-    <url>http://jtechlog.blogspot.com</url>
+    <version>1.0.0</version>
+    <description>Gem Game logikai játék</description>
+    <url>http://www.jtechlog.hu</url>
     <inceptionYear>1999</inceptionYear>
 
     <developers>
@@ -25,43 +23,16 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>12</maven.compiler.source>
+        <maven.compiler.target>12</maven.compiler.target>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.10</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
     <build>
-	<finalName>gem-game</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-		<version>2.2</version>
+		        <version>3.1.2</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -70,14 +41,6 @@
                     </archive>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.1</version>
-                <configuration>
-                    <mainClass>GemGameApplication</mainClass>
-                </configuration>
-            </plugin>
-        </plugins>        
+        </plugins>
     </build>
 </project>
